open-policy-agent/monitoring-observability/log-level-validation/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sLogLevel
metadata:
  name: log-level-validation
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Secret"]
    namespaces: ["kube-system"]
