open-policy-agent/monitoring-observability/log-level-validation/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sloglevel
  annotations:
    description: Varify that the log level is set to one of the options in the input
spec:
  crd:
    spec:
      names:
        kind: K8sLogLevel
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package K8sLogLevel
        violation[{"msg": msg}] {
          input.review.kind.kind == "Secret"
          input.review.object.metadata.name == "kubeadmin"
          msg := "Log level must be set to one of: "
        }
